# rusto-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  convert_paddle_to_mnn.py
.cargo/: config.toml
.github/workflows/: build.yml  paddleocr_ops_config.json  publish.yml
benches/: ocr_benchmark.rs
docs/archive/: 100_PERCENT_PARITY_ANALYSIS.md  COMPLETE_STATUS.md  CRITICAL_NEXT_STEPS.md  FINAL_IMPLEMENTATION_GUIDE.md  FINAL_MIGRATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_FINAL_STATUS.md  MIGRATION_PROGRESS.md  MIGRATION_STATUS.md  PLATFORM_BINDINGS_UPDATE.md  PURE_RUST_MIGRATION.md  PURE_RUST_VERIFICATION.md  REBRANDING_SUMMARY.md  REFACTORING_PLAN.md  REORGANIZATION_SUMMARY.md  TUNING_SUMMARY.md
examples/: perf_test.rs
models/PPOCR_v5/: det.mnn  rec.mnn
src/: cal_rec_boxes.rs  contours.rs  det.rs  engine.rs  ffi.rs  geometry.rs  image_impl.rs  lib.rs  main.rs  postprocess.rs  preprocess.rs  rapid_ocr.rs  rec.rs  rusto_ocr.rs  types.rs
